--- a/components/drinkInfo.css
+++ b/components/drinkInfo.css
@@ -1,6 +1,4 @@
-/* ProductDetailModal.css */
 .detail-modal {
-    /* Style the modal overlay */
     position: fixed;
     top: 0;
     left: 0;
@@ -12,14 +10,37 @@
     align-items: center;
     z-index: 1000 ;
   }
+
   .detail-modal .card{
     max-width: 300px;
   }
   
   .modal-content {
-    /* Style the modal content */
-    padding: 20px;
+    padding: 5px 10px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   }
-  
+  .top-card{
+    display: flex;
+  }
+  .title{
+    display: inline;
+    width: 100%;
+    text-align: center;
+  }
+  .back{
+    width: 40px;
+    color:gray
+  }
+  .back:hover{
+    color:white;
+  }
+  .list{
+    margin-top: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .item {
+    font-size: 14px;
+    margin-right: 20px;
+  }
