--- a/components/card.css
+++ b/components/card.css
@@ -1,9 +1,9 @@
 /* Card.css */
 .card {
-    border: 1px solid white; /* Thin white border */
-    border-radius: 10px; /* Rounded corners */
-    padding: 20px; /* Adjust padding as needed */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Optional shadow effect */
-    overflow: hidden; /* Hide overflowing content */
+    border: 1px solid white; 
+    border-radius: 10px; 
+    padding: 20px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden; 
   }
   
