--- a/components/polaroidCard.css
+++ b/components/polaroidCard.css
@@ -1,30 +1,35 @@
-.polariod{
+.polariod {
   width: 250px;
-  height:333px;
-  justify-content: center;
+  height: 333px;
 }
-  .polaroid-image {
-    width: 200px;
-    max-height: 250px; /* Adjust as needed */
-    border: 2px solid #f5f5f5; /* Polaroid-like border */
-    border-radius: 5px;
-  }
-  
-  .polaroid-details {
-    width: 100%;
-    margin-top: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .polaroid-name {
-    font-size: 18px;
-    font-weight: bold;
-  }
-  
-  .polaroid-price {
-    font-size: 16px;
-    color: #888;
-  }
-  
+.polaroid .card{ 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+.polaroid-image {
+  width: 200px;
+  max-height: 250px; /* Adjust as needed */
+  border: 2px solid #f5f5f5; /* Polaroid-like border */
+  border-radius: 5px;
+}
+
+.polaroid-details {
+  width: 100%;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.polaroid-name {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.polaroid-price {
+  font-size: 16px;
+  color: #888;
+}
