--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,12 @@ a {
     color-scheme: dark;
   }
 }
+main {
+  background-color: blue;
+  position: absolute;
+  margin: 0;
+  width: 98%;
+  left:1%;
+  height: 90vh;
+  top: 50px;
+}
