--- a/app/contact/page.css
+++ b/app/contact/page.css
@@ -1,36 +1,34 @@
-.contact-box{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    justify-content: center; 
-    width: 80%;
-    left: 10%; 
-    height: 100vh;
-    align-items: center;
+.contact-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
-@media (min-width:1388px){
-    .contact-box{
-        flex-direction: row;
-    }
+@media (min-width: 1388px) {
+  .contact-box {
+    flex-direction: row;
+  }
 }
-.contact-box .card{
-    width: 350px;
-    height: 200px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.contact-box .card {
+  width: 350px;
+  height: 200px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
-  
+
 .user-id {
-font-size: 24px; 
-font-weight: bold;
-margin: 15px; 
+  font-size: 24px;
+  font-weight: bold;
+  margin: 15px;
 }
 
 .social {
-font-size: 18px;
-color: gray;
+  font-size: 18px;
+  color: gray;
 }
