--- a/app/page.css
+++ b/app/page.css
@@ -1,8 +1,8 @@
-.main {
+.intro{
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
