--- a/components/animatedLine.css
+++ b/components/animatedLine.css
@@ -4,15 +4,16 @@
   justify-content: center;
   align-items: center;
   height: 5px;
-  width: 90%;
+  width: 100%;
+  max-width: 800px;
   overflow: hidden; /* Hide overflowing content */
 }
 
 .line {
-  width: 2px; /* Set the initial width of the line */
-  height: 2px; /* Line height */
-  background-color: #f4efef; /* Line color */
-  opacity: 1; /* Initially fully opaque */
+  width: 2px; 
+  height: 2px; 
+  background-color: #f4efef; 
+  opacity: 1; 
   animation: expandLine 2s ease-out forwards, splitLine 1s 1s ease-out forwards;
 }
 
@@ -21,9 +22,9 @@
     width: 0;
   }
   70% {
-    width: 70%; /* Expand to 70% of the screen width */
+    width: 70%; 
   }
   100% {
-    width: 70%;
+    width: 90%;
   }
 }
