--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -71,11 +71,61 @@ a {
   }
 }
 main {
-  background-color: blue;
   position: absolute;
   margin: 0;
   width: 98%;
-  left:1%;
+  left: 1%;
   height: 90vh;
-  top: 50px;
+  top: 100px;
+}
+.blur {
+  filter: blur(5px);
+}
+.bttn {
+  color: gray;
+  margin: 2px;
+  transition: color 0.3s ease; /* Smooth color transition on hover */
+}
+.bttn:hover {
+  color: white;
+}
+.spacer {
+  flex-grow: 1; /* Empty space that takes up remaining available space */
+}
+.drinks {
+  position: relative;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 96%;
+  left: 2%;
+}
+.detail-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 5, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+.detail-modal .card {
+  max-width: 350px;
+}
+input {
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.55);
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  width: 100%;
+  height: 32px;
+  font-size: 18px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding: 2px;
 }
