--- a/components/login.css
+++ b/components/login.css
@@ -1,34 +1,3 @@
-.login-modal{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 5, 0.5); /* Semi-transparent background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000 ;
-}
-.login-modal .card{
-    max-width: 350px;
-    height: 250px;
-}
-
-input {
-    outline: none;
-    border: 1px solid rgba(255, 255, 255, 0.55);
-    border-radius: 5px;
-    width: 100%;
-    height: 35px;
-    font-size: 20px;
-    background-color: rgba(0,0,0,0);
-    margin-bottom: 5px;
-    margin-top: 5px;
-    padding: 2px;
-}
-.enter{
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
+.enter {
+  float: right;
 }
