--- a/app/page.css
+++ b/app/page.css
@@ -1,6 +1,7 @@
 .intro{
   width: 100%;
-  height: 100%;
+  padding: 1rem;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
