--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@ main {
   left: 1%;
   height: 90vh;
   top: 100px;
-  background-color: blue;
+  padding: 1rem;
 }
 .blur {
   filter: blur(5px);
@@ -108,7 +108,7 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 70%;
   background-color: rgba(0, 0, 5, 0.5);
   display: flex;
   justify-content: center;
