--- a/components/nav.css
+++ b/components/nav.css
@@ -1,18 +1,17 @@
 /* Navigation styles */
 nav {
-  position: absolute;
-  left: 10%;
-  width: 80%;
+  position: fixed;
+  width: 100%;
   color: gray; /* Default text color */
   align-items: center;
-  margin-bottom: 20px;
   z-index: 2000;
+  background-color: black;
 }
 
 nav ul {
   list-style: none;
   margin: 0;
-  padding: 20px;
+  padding: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
