--- a/components/polaroidCard.css
+++ b/components/polaroidCard.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  margin: 5px;
+  margin: 1px;
+  padding: 1px;
 }
 
 .polariod {
@@ -11,14 +12,14 @@
 }
 
 .polaroid-image {
-  width: 200px;
-  max-height: 250px; /* Adjust as needed */
-  border: 2px solid #f5f5f5; /* Polaroid-like border */
-  border-radius: 5px;
+  width: 288px;
+  max-height: 385px; /* Adjust as needed */
+  border: 2px solid #060606; /* Polaroid-like border */
+  border-radius: 10px;
 }
 .polaroid-details {
   width: 100%;
-  margin-top: 15px;
+  margin: 1px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,9 +36,6 @@
 }
 
 @media (max-width: 700px),(max-height: 400px ){
-  .polaroid .card{
-    padding: 5px;
-  }
   .polariod{
     width: 125px;
     max-height: 250px;
