--- a/components/nav.css
+++ b/components/nav.css
@@ -15,6 +15,8 @@ nav ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 nav li {
