--- a/app/globals.css
+++ b/app/globals.css
@@ -49,6 +49,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
@@ -71,13 +72,16 @@ a {
   }
 }
 main {
-  position: absolute;
+  /* position: absolute;
   margin: 0;
   width: 98%;
   left: 1%;
   height: 90vh;
-  top: 100px;
-  padding: 1rem;
+  top: 100px;*/
+  padding: 1rem;  
+  height: 90vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 .blur {
   filter: blur(5px);
