--- a/components/0/Gallery.css
+++ b/components/0/Gallery.css
@@ -1,8 +1,29 @@
-.gallery{
-    background-color: red;
-    padding: 16px;
+.window{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-auto-rows: min-content;
+    gap: 5px;
+    align-items: center;
+    padding: 1rem;
 }
-.g-image{
-    width: 250px;
-    height:330px;
+.g-img-box{
+    margin: 1px;
+    overflow: hidden;
+}
+.g-img{
+    width: 100%;
+    transition: transform 2s;   ;
+}
+.g-img:hover{
+    transform: scale(1.2);
+}
+.img-blur{
+    filter:blur(5px)
+}
+.img-fade{
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+.g-img-box.loaded .g-img{
+    opacity: 1;
 }
