--- a/app/globals.css
+++ b/app/globals.css
@@ -78,10 +78,12 @@ main {
   left: 1%;
   height: 90vh;
   top: 100px;*/
-  padding: 1rem;  
   height: 90vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
+}
+main > *{
+  padding-left: 30px;
 }
 .blur {
   filter: blur(5px);
