--- a/app/redesign/page.css
+++ b/app/redesign/page.css
@@ -5,7 +5,8 @@ nav {
     color: gray; /* Default text color */
     align-items: center;
     z-index: 2000;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
+    padding-right:1rem;
   }
   
   nav ul {
@@ -13,10 +14,8 @@ nav {
     margin: 0;
     padding: 5px;
     display: flex;
-    justify-content:flex-start;
+    justify-content:flex-end;
     align-items: center;
-    padding-left: 16px;
-    padding-right: 16px;
   }
   
   nav li {
