--- a/components/0/PortfolioHeader.css
+++ b/components/0/PortfolioHeader.css
@@ -3,25 +3,25 @@
     padding: 15px;
     height: 70vh;
     padding-left: 30px;
-}
-h3{
     font-family: Arial, sans-serif;
 }
 .group{
     display: flex;
 }
 .group.group-c{
+    margin-top: 30px;
     height:25%;
     flex-direction: column;
     justify-content: flex-end;
 }
 .first{
-    color: #800080;
+    color: #008080;
 }
 .second{
     color:#C0C0C0;
 }
 #description{
     margin-top: 20px;
-    width: 66%;
+    width: 50%;
+    color: #CCCCCC ;
 }
