--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,7 @@ main {
   height: 90vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  font-family: Arial, sans-serif;
 }
 main > *{
   padding-left: 30px;
