--- a/app/redesign/page.css
+++ b/app/redesign/page.css
@@ -7,6 +7,9 @@ nav {
     background-color: rgba(0, 0, 0, 0);
     padding-right:30px;
   }
+  .fill{
+    background-color:#191970;
+  }
   
   nav ul {
     list-style: none;
@@ -28,6 +31,15 @@ nav {
   }
   
   nav a:hover {
-    color: #DC143C;
+    color: #8B0000;
   }
-  
+  .li-focus{
+    color:gold;
+  }
+  .contact{
+    height: 80vh;
+    padding-top: 50px;
+  }
+.f-focus{
+    background-color:#C0C0C0;
+  }
