--- a/app/page.css
+++ b/app/page.css
@@ -6,3 +6,74 @@
   justify-content: center;
   align-items: center;
 }
+
+
+nav {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  align-items: center;
+  z-index: 2000;
+  background-color: rgba(0, 0, 0, 0);
+  padding-right:30px;
+}
+.fill{
+  background-color:#191970;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 5px;
+  display: flex;
+  justify-content:flex-end;
+  align-items: center;
+}
+
+nav li {
+  margin-left: 20px; /* Adjust spacing between items */
+}
+
+nav a {
+  font-size: 14px;
+  text-decoration: none;
+  transition: color 0.3s ease; /* Smooth color transition on hover */
+}
+
+nav a:hover {
+  color: #8B0000;
+}
+.li-focus{
+  color:gold;
+}
+.contact{
+  height: 80vh;
+  padding-top: 50px
+}
+#socials-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+#socials-box .card{
+  width: calc(30%);
+  max-width: 300px;
+  margin: 10px;
+  text-align: center;
+  background-color:  #008080;;
+}
+footer{
+  text-align: center;
+  color:black
+}
+.f-focus{
+  background-color:#C0C0C0;
+}
+
+@media(max-width: 750px) {
+  #socials-box{
+    flex-direction: column;
+  }
+  
+}
