--- a/components/Gallery.css
+++ b/components/Gallery.css
@@ -2,10 +2,14 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: min-content;
-    grid-template-columns: repeat(auto-fit,minmax(50px,250px));
     gap: 5px;
     align-items: center;
     padding: 1rem;
+}
+@media (min-width: 1106px){
+    .window{
+        grid-template-columns: repeat(auto-fit,minmax(50px,250px));
+    }
 }
 .g-img-box{
     overflow: hidden;
