--- a/app/globals.css
+++ b/app/globals.css
@@ -116,8 +116,8 @@ main > *{
   top: 0;
   left: 0;
   width: 100%;
-  height: 70%;
-  background-color: rgba(0, 0, 5, 0.5);
+  height: 100%;
+  background-color: rgba(0, 0, 5, 0.762);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -137,4 +137,12 @@ input {
   margin-bottom: 5px;
   margin-top: 5px;
   padding: 2px;
+}
+.first{
+  /* color: #008080; */
+  color: #942525 ;
+}
+.second{
+ /* // color:#C0C0C0; */
+ color: #E0E0E0;
 }
