--- a/app/page.css
+++ b/app/page.css
@@ -66,7 +66,8 @@ nav a:hover {
   max-width: 300px;
   margin: 10px;
   text-align: center;
-  background-color: #191970;
+  /* background-color: #191970; */
+  background-color: #C62828;
 }
 footer{
   text-align: center;
